[gd_scene load_steps=10 format=3 uid="uid://kwtgggq20hns"]

[ext_resource type="Script" uid="uid://c5elrpbp3qq2n" path="res://scripts/scenes/settings_menu.gd" id="1_wswnh"]
[ext_resource type="Texture2D" uid="uid://b060uyotkgai4" path="res://images/menu_background.png" id="2_n0fy7"]
[ext_resource type="FontFile" uid="uid://kix12tgfjm8k" path="res://images/Slackey-Regular.ttf" id="2_wswnh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jpbdv"]
texture = ExtResource("2_n0fy7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_labj1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lwwgp"]
bg_color = Color(0.791999, 0.791999, 0.791999, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bgjg7"]
bg_color = Color(0.617455, 0.617455, 0.617455, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48ojb"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wswnh"]
bg_color = Color(0.85098, 0.423529, 0.0705882, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wswnh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jpbdv")

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -271.0
offset_top = 82.0
offset_right = 271.0
offset_bottom = 153.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_wswnh")
theme_override_font_sizes/font_size = 50
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(250, 75)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -159.0
offset_right = 125.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wswnh")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_labj1")
theme_override_styles/hover = SubResource("StyleBoxFlat_lwwgp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bgjg7")
theme_override_styles/normal = SubResource("StyleBoxFlat_48ojb")
text = "Back"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -125.0
offset_right = 400.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wswnh")

[node name="GridContainer" type="GridContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -52.0
offset_right = 271.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 30
columns = 4

[node name="MusicVolumeLabel" type="Label" parent="Panel2/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_wswnh")
theme_override_font_sizes/font_size = 30
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolumeSettingLabel" type="Label" parent="Panel2/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_wswnh")
theme_override_font_sizes/font_size = 30
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolumeDown" type="Button" parent="Panel2/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wswnh")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_labj1")
theme_override_styles/hover = SubResource("StyleBoxFlat_lwwgp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bgjg7")
theme_override_styles/normal = SubResource("StyleBoxFlat_48ojb")
text = "-"

[node name="MusicVolumeUp" type="Button" parent="Panel2/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wswnh")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_labj1")
theme_override_styles/hover = SubResource("StyleBoxFlat_lwwgp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bgjg7")
theme_override_styles/normal = SubResource("StyleBoxFlat_48ojb")
text = "+"

[node name="SoundEffectsVolumeLabel" type="Label" parent="Panel2/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_wswnh")
theme_override_font_sizes/font_size = 30
text = "Sound Effects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundEffectsVolumeSettingLabel" type="Label" parent="Panel2/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_wswnh")
theme_override_font_sizes/font_size = 30
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundEffectsVolumeDown" type="Button" parent="Panel2/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wswnh")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_labj1")
theme_override_styles/hover = SubResource("StyleBoxFlat_lwwgp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bgjg7")
theme_override_styles/normal = SubResource("StyleBoxFlat_48ojb")
text = "-"

[node name="SoundEffectsVolumeUp" type="Button" parent="Panel2/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wswnh")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_labj1")
theme_override_styles/hover = SubResource("StyleBoxFlat_lwwgp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bgjg7")
theme_override_styles/normal = SubResource("StyleBoxFlat_48ojb")
text = "+"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel2/GridContainer/MusicVolumeDown" to="." method="_on_music_volume_minus_button_pressed"]
[connection signal="pressed" from="Panel2/GridContainer/MusicVolumeUp" to="." method="_on_music_volume_plus_button_pressed"]
[connection signal="pressed" from="Panel2/GridContainer/SoundEffectsVolumeDown" to="." method="_on_sound_effects_volume_minus_button_pressed"]
[connection signal="pressed" from="Panel2/GridContainer/SoundEffectsVolumeUp" to="." method="_on_sound_effects_volume_plus_button_pressed"]
